Removing deprecated JVM option